--- a/css.css
+++ b/css.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("img/1.jpg");
+  background-image: url("imgs/1.jpg");
 
   background-size: cover;
   background-position: center center;
@@ -108,7 +108,7 @@ body {
   background-color: white;
 }
 .imagen {
-  background-image: url("img/2.png"); 
+  background-image: url("imgs/2.png"); 
   background-position: left;
   background-repeat: no-repeat;
   height: 50px; 
