--- a/css.css
+++ b/css.css
@@ -1,15 +1,15 @@
 body {
-  background-image: url("imgs/1.jpg");
-
+  background-image: url("img/1.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-   
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: rgb(37, 0, 48);
-  }
+  background-attachment: fixed; 
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(37, 0, 48);
+}
+
   
   header {
     background-color:transparent;
@@ -24,7 +24,6 @@ body {
     display: flex;
     justify-content: space-between;
   }
-  
   .crypto-list, .crypto-details {
     width: 38%;
     color: white;
@@ -46,7 +45,7 @@ body {
   .crypto-list li {
     border: 1px solid #ddd;
     margin-bottom: 10px;
-    padding: 10px;
+    padding: 20px;
   
   }
   .crypto-list li:hover {
@@ -55,18 +54,20 @@ body {
   
   .crypto-info h3 {
     margin-top: 0;
+    color:#fb2e80;
     
   }
  
   .pagination {
     margin-top: 20px;
     text-align: center;
-    margin-left: -20px;
+    margin-left: 20px;
+    
   }
   
   .crypto-details {
     margin-right: 110px;
-    margin-top: 80px;
+    margin-top: 125px;
     background-color: #000000;
     border: 1px solid #ddd;
     padding: 20px;
@@ -75,18 +76,23 @@ body {
     border-radius: 10px;
   }
   .crypto-details:hover {
-    border-color:#fb4c9bed;
+    border-color:#4cfbf2ed;
   }
   
   footer {
     border: 1.5px solid #42005e;
     background-color:transparent;
     color: #fff;
-    text-align: center;
+    text-align: center; 
     padding: 0px;
     position: fixed;
     bottom: 0;
     width: 99.9%; 
+  }
+  .footer-text {
+    position: absolute;
+    left: 140px; /* Ajusta este valor para mover el texto a la derecha */
+    bottom: 10px; /* Ajusta este valor para mover el texto verticalmente */
   }
   .crypto-list p,
 .crypto-details p {
@@ -108,7 +114,7 @@ body {
   background-color: white;
 }
 .imagen {
-  background-image: url("imgs/2.png"); 
+  background-image: url("img/2.png"); 
   background-position: left;
   background-repeat: no-repeat;
   height: 50px; 
@@ -117,6 +123,41 @@ body {
   font-size: 30px;
   padding: 20px;
 }
+.fijo {
+  position: fixed;
+  top: 80px;
+  right: 20px;
+  width: 38%;
+  z-index: 1;
+}
+.controles-lista {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-left: 32px;
+}
+.controles-lista > div:first-child {
+  margin-right: 20px;
+}
 
+.btn-restaurar, .ordenar-por select, .filtrar-por input, .filtrar-por button, .boton-transparente2 {
+  background-color:rgb(0, 0, 0);
+  border: 1px solid;
+  border-color: #ffffff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  color: #fb2e80;
+  font-size: 15px;
+  padding: 8px 8px;
+}
 
+.filtrar-por input {
+  width: 150px;
+}
 
+.btn-restaurar:hover, .ordenar-por select:hover, .filtrar-por input:hover, .filtrar-por button:hover, .boton-transparente2:hover {
+  border-color: rgb(255, 255, 255);
+  color: rgb(7, 7, 7);
+  background-color:  #fb2e80;
+}
